k8s-deployment-frontend.yaml
---
# Deployment of the frontend application
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agent-frontend
  name: agent-frontend
  namespace: agent-debate-v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-frontend
  template:
    metadata:
      labels:
        app: agent-frontend
    spec:
      containers:
        - image: jonathankong/agent-frontend:v10 # Point to your frontend image
          name: agent-frontend
          ports:
            - name: http
              containerPort: 3000 # Ensure this matches the port your frontend listens on
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 2Gi

---
# Service for the frontend
apiVersion: v1
kind: Service
metadata:
  labels:
    app: agent-frontend
  name: agent-frontend
  namespace: agent-debate-v4
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: agent-frontend
