agent-debate-deployment.yaml
---
#  Deployment of the backend application
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agent-backend
  name: agent-backend
  namespace: agent-debate-v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-backend
      version: v1
  template:
    metadata:
      labels:
        app: agent-backend
        version: v1
    spec:
      serviceAccountName: agent-debate-v4-xsuaa-sa
      containers:
        - image: jonathankong/agent-backend:v12 # Ensure this points to your backend image
          imagePullPolicy: Always
          name: agent-backend
          ports:
            - name: http
              containerPort: 8080
          envFrom: # Ensure this matches the secret name you created earlier
            - secretRef:
                name: agent-backend-secret
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            readOnlyRootFilesystem: false

---
# Service for backend
apiVersion: v1
kind: Service
metadata:
  labels:
    app: agent-backend
  name: agent-backend
  namespace: agent-debate-v4
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: agent-backend
---
# Deployment of the frontend application
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agent-frontend
  name: agent-frontend
  namespace: agent-debate-v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-frontend
  template:
    metadata:
      labels:
        app: agent-frontend
    spec:
      containers:
        - image: jonathankong/agent-frontend:v11 # Point to your frontend image
          name: agent-frontend
          ports:
            - name: http
              containerPort: 3000 # Ensure this matches the port your frontend listens on
          resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 2Gi

---
# Service for the frontend
apiVersion: v1
kind: Service
metadata:
  labels:
    app: agent-frontend
  name: agent-frontend
  namespace: agent-debate-v4
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: agent-frontend

---
# AppRouter Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: agent-debate-v4-approuter
  name: agent-debate-v4-approuter
  namespace: agent-debate-v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-debate-v4-approuter
  template:
    metadata:
      labels:
        app: agent-debate-v4-approuter
    spec:
      volumes:
        - name: xs-app
          configMap:
            name: agent-debate-v4-xs-app-configmap
        - name: agent-debate-v4-xsuaa-service-binding
          secret:
            secretName: agent-debate-v4-xsuaa-service-binding-secret
      containers:
        - image: sapse/approuter:16.0.1
          name: agent-debate-v4-approuter
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: xs-app
              mountPath: /app/xs-app.json
              subPath: xs-app.json
              readOnly: true
            - name: agent-debate-v4-xsuaa-service-binding
              mountPath: /etc/secrets/sapcp/xsuaa/agent-debate-v4-xsuaa-service-instance
              readOnly: true
---
# Destinationrule for frontend service
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: agent-debate-v4-frontend-destrule
  namespace: agent-debate-v4
spec:
  host: agent-frontend
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: JSESSIONID
          path: /
          ttl: 0s
---
# Destinationrule for backend service
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: agent-debate-v4-backend-destrule
  namespace: agent-debate-v4
spec:
  host: agent-backend
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: JSESSIONID
          path: /
          ttl: 0s
---
# Service for the AppRouter
apiVersion: v1
kind: Service
metadata:
  labels:
    app: agent-debate-v4-approuter
  name: agent-debate-v4-approuter
  namespace: agent-debate-v4
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: agent-debate-v4-approuter
